Updated logout, valiadte.php and welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -56,13 +56,14 @@
                     <p>Board of Directors</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="./images/christina.jpg" alt="" style="max-width: 100%; ">
+                    <img src="./images/alex.jpg" alt="" style="max-width: 100%; ">
                     <p>C.E.O</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="./images/clay.jpg" alt="" style="max-width: 100%;">
+                    <img src="./images/pic (4).jpg" alt="" style="max-width: 100%;">
                     <p>Human Resource</p>
                 </div>
             </div>
+        </div>
 </body>
 </html>
