Added a login button

--- a/welcome.html
+++ b/welcome.html
@@ -20,6 +20,7 @@
         } 
         .log-out{
             margin-top: 10px;
+            margin-right: 10px;
             border: 2px solid #f0f0f0;
             padding: 10px;
             border-radius: 3px;
@@ -34,6 +35,7 @@
         <a href="#">SilverCrest</a>
         <!-- <h3>Welcome <?php echo $_SESSION['username']; ?> </h3> -->
         <a href="logout.php" class="log-out">Logout</a>
+        <a href="login.html" class="log-out">Login</a>
     </h1>
     <div id="about-section" class="about">
         <h3 class="about_section">About Us</h3>
