--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
     <title>Welcome page</title>
     <style>
         body{
@@ -29,7 +28,7 @@
             font-size: 14px;
         }
         /* form{
-            width: 450px;
+            width: 550px;
             margin: 8vh auto 0 auto;
         } */
         label{
@@ -38,6 +37,9 @@
         }
         .formField input{
             padding: 10px;
+        }
+        .formField input:focus{
+            outline: 0;
         }
         .container{
             background-color: #848482;
@@ -50,7 +52,19 @@
             display: flex;
             flex-direction: column;
         }
-        
+        .log-in{
+            padding: 10px;
+            margin-top: 10px;
+            width: 100%;
+            background-color: blue;
+            border: none;
+            border-radius: 3px;
+            font-size: medium;
+            color: white;
+        }
+        .log-in:hover{
+            background-color: rgb(9, 9, 162);
+        }
     </style>
 </head>
 <body>
@@ -68,11 +82,12 @@
                 Phasellus sollicitudin venenatis sodales. Phasellus a urna quam. Aenean ex metus, malesuada sed finibus eget, porttitor ut urna. Nunc consequat, sapien vitae congue tempus, nibh tellus placerat quam, quis iaculis elit leo venenatis leo. Sed vel massa mauris. Vestibulum consequat metus sem, aliquam condimentum magna semper id.
             </p>
     
-            <p>Vestibulum ultricies justo sem, in commodo erat rhoncus sit amet. Integer sit amet diam laoreet sem hendrerit convallis. Morbi scelerisque dui nisl, vel congue massa convallis id. Suspendisse pharetra scelerisque convallis. Curabitur efficitur sem blandit lorem vehicula, vel dictum tellus porttitor. Nulla vel rhoncus dui, eu sodales lacus.
+            <!-- <p>Vestibulum ultricies justo sem, in commodo erat rhoncus sit amet. Integer sit amet diam laoreet sem hendrerit convallis. Morbi scelerisque dui nisl, vel congue massa convallis id. Suspendisse pharetra scelerisque convallis. Curabitur efficitur sem blandit lorem vehicula, vel dictum tellus porttitor. Nulla vel rhoncus dui, eu sodales lacus.
                 Phasellus sollicitudin venenatis sodales. Phasellus a urna quam. Aenean ex metus, malesuada sed finibus eget, porttitor ut urna. Nunc consequat, sapien vitae congue tempus, nibh tellus placerat quam, quis iaculis elit leo venenatis leo. Sed vel massa mauris. Vestibulum consequat metus sem, aliquam condimentum magna semper id.
-            </p>
+            </p> -->
         </div>
         <form id="form" method="POST" action="">
+            <p>Please fill in the form below:</p>
             <div class="container">
                 <div class="formField">
                     <label><b>Mobile number:</b></label>
