updated registration form

--- a/register.html
+++ b/register.html
@@ -25,16 +25,22 @@
                 <input type="text" id="email" name="email">
                 <small></small>
             </div>
-<!-- work on progress -->
             <div class="formField">
                 <label for="phone">Phone Number</label>
                 <input type="tel" id="phone" name="phone">
                 <small></small>
             </div>
-
+<!-- work in progress -->
             <div class="formField">
                 <label for="registration">Registration Number</label>
                 <input type="text" id="regno" name="regno">
+                <small></small>
+            </div>
+
+            <!-- work in progress -->
+            <div class="formField">
+                <label for="address">Address</label>
+                <input type="text" id="address" name="address" >
                 <small></small>
             </div>
 
