worked on php mail composer

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             </div>
             <div class="container" style="background-color: #c6c4c4;">
                 <p>Don't have an account?<button type="button" class="register-btn" onclick="window.location.href='register.html';">Register</button>
-                <span class="psw">Forgot <a href="reset-password.html">password?</a></span>
+                <span class="psw">Forgot <a href="password-reset.php">password?</a></span>
             </div>
         </form>
 </body>
