updated form design

--- a/login.html
+++ b/login.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="login1.css">
 </head>
 <body>
-    <h3>LOGIN</h3>
+    <!-- <h3>LOGIN</h3> -->
     <div id="error" style="color: red; font-style:italic;"></div>
         <form id="form" method="POST" action="validate.php">
             <div class="container">
+                <h3>LOGIN</h3>
                 <div class="formField">
                     <label><b>Username:</b></label>
                     <input type="text" id="username" name="name" placeholder="Enter your name" >
